Fix spacing between text fields

--- a/src/components/TextInput/styles.module.scss
+++ b/src/components/TextInput/styles.module.scss
@@ -1,5 +1,12 @@
 @import "$styles/mixins/_textInput";
+@import "$styles/_variables";
 
 div.textInput {
   @include textInput;
+
+  margin-bottom: $normalSpacing;
+}
+
+div.withoutMargin {
+  margin: 0;
 }
